--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- Center Content -->
     <div class="center-content">
       <h2 class="headline">Empowering Learners Everywhere</h2>
-      <p class="subtext">Curated open-source content for free learning with AI tools.</p>
-      <img src="./assets/images/learning-guy.png" alt="Learning Illustration" class="hero-image"/>
+      <p class="subtext">At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
+      <img src="./assets/bg.png" alt="Learning Illustration" class="hero-image"/>
     </div>
   </div>
 </body>
