--- a/index.html
+++ b/index.html
@@ -5,33 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ukno Club</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="landing-page">
-    <!-- Logo and tagline -->
-    <div class="logo-box">
-      <h1 class="logo-main">UKNO</h1>
-      <div class="club-box">
-        <div class="club-border"></div>
-        <h2 class="club-text">CLUB</h2>
+  <div class="container">
+    <!-- Top Bar -->
+    <div class="top-bar">
+      <img src="assets/logo.png" alt="Ukno Logo" class="logo" />
+      <div class="nav-buttons">
+        <button>SIGN UP / LOG IN</button>
+        <button>ABOUT US</button>
       </div>
-      <p class="tagline">Learn Freely!</p>
     </div>
 
-    <!-- Navigation Buttons -->
-    <div class="nav-buttons">
-      <a href="#" class="nav-btn">SIGN UP / LOG IN</a>
-      <a href="#" class="nav-btn">CONTENT</a>
-      <a href="#" class="nav-btn">DONATE US</a>
-      <a href="#" class="nav-btn">FEEDBACK</a>
-    </div>
-
-    <!-- Center Content -->
-    <div class="center-content">
-      <h2 class="headline">Empowering Learners Everywhere</h2>
-      <p class="subtext">At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
-      <img src="./assets/bg.png" alt="Learning Illustration" class="hero-image"/>
+    <!-- Bottom Right Section -->
+    <div class="feature-icons">
+      <div class="feature-item">
+        <span>Data Analytics</span>
+        <img src="assets/qm.png" alt="Icon" />
+      </div>
+      <div class="feature-item">
+        <span>Business Analyst</span>
+        <img src="assets/qm.png" alt="Icon" />
+      </div>
+      <div class="feature-item">
+        <span>Data Science</span>
+        <img src="assets/qm.png" alt="Icon" />
+      </div>
+      <div class="feature-item">
+        <span>Big Data</span>
+        <img src="assets/qm.png" alt="Icon" />
+      </div>
+      <div class="feature-item">
+        <span>AI & ML</span>
+        <img src="assets/qm.png" alt="Icon" />
+      </div>
+      <div class="feature-item">
+        <span>Deep Learning</span>
+        <img src="assets/qm.png" alt="Icon" />
+      </div>
     </div>
   </div>
 </body>
