--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ukno Club</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ukno Club</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <!-- Top Bar -->
-    <div class="top-bar">
-      <img src="assets/logo.png" alt="Ukno Logo" class="logo" />
-      <div class="nav-buttons">
-        <button>SIGN UP / LOG IN</button>
-        <button>ABOUT US</button>
-      </div>
+    <div class="landing-page">
+        <div class="hero">
+            <div class="top-bar">
+                <img src="assets/logo.png" alt="Ukno Club Logo" class="logo">
+                <div class="nav-buttons">
+                    <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
+                    <a href="donate.html" class="about-us">About Us</a>
+                </div>
+            </div>
+            <div class="hero-content">
+                <div class="hero-left">
+                    <div class="ukno-learn">
+                        <h1>UKNO<span class="club">CLUB</span></h1>
+                        <div class="learn-freely">
+                            <span class="learn">Learn</span>
+                            <div class="underline"></div>
+                            <span class="freely">Freely!</span>
+                        </div>
+                    </div>
+                    <div class="social-icons">
+                        <a href="#" target="_blank" class="icon youtube"></a>
+                        <a href="#" target="_blank" class="icon instagram"></a>
+                        <a href="#" target="_blank" class="icon linkedin"></a>
+                        <a href="#" target="_blank" class="icon telegram"></a>
+                    </div>
+                </div>
+                <div class="hero-right">
+                    <h1>Empowering Learners, Freely</h1>
+                    <p>At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
+                </div>
+            </div>
+        </div>
+        <div class="feature-icons-bar">
+            <div class="feature-icon">Data<br>Analytics <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Business<br>Analyst <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Data<br>Science <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Big<br>Data <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">AI &<br>ML <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Deep<br>Learning <img src="assets/qm.png" alt="?"></div>
+        </div>
     </div>
-
-    <!-- Bottom Right Section -->
-    <div class="feature-icons">
-      <div class="feature-item">
-        <span>Data Analytics</span>
-        <img src="assets/qm.png" alt="Icon" />
-      </div>
-      <div class="feature-item">
-        <span>Business Analyst</span>
-        <img src="assets/qm.png" alt="Icon" />
-      </div>
-      <div class="feature-item">
-        <span>Data Science</span>
-        <img src="assets/qm.png" alt="Icon" />
-      </div>
-      <div class="feature-item">
-        <span>Big Data</span>
-        <img src="assets/qm.png" alt="Icon" />
-      </div>
-      <div class="feature-item">
-        <span>AI & ML</span>
-        <img src="assets/qm.png" alt="Icon" />
-      </div>
-      <div class="feature-item">
-        <span>Deep Learning</span>
-        <img src="assets/qm.png" alt="Icon" />
-      </div>
-    </div>
-  </div>
+    <div class="background-blur"></div>
 </body>
 </html>
