--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             </div>
         </div>
         <div class="feature-icons-bar">
-            <div class="feature-icon">Data<span style="margin-left: 5px;">Analytics</span><img style="margin-left: 5px;" src="assets/qm_red.png" alt="?"></div>
-            <div class="feature-icon">Business<span style="margin-left: 5px;">Analyst</span><img style="margin-left: 5px;" src="assets/qm_red.png" alt="?"></div>
-            <div class="feature-icon">Data<span style="margin-left: 5px;">Science</span><img style="margin-left: 5px;" src="assets/qm_red.png" alt="?"></div>
-            <div class="feature-icon">Big<span style="margin-left: 5px;">Data</span><img style="margin-left: 5px;" src="assets/qm_red.png" alt="?"></div>
-            <div class="feature-icon">AI &<span style="margin-left: 5px;">ML</span><img style="margin-left: 5px;" src="assets/qm_red.png" alt="?"></div>
-            <div class="feature-icon">Deep<span style="margin-left: 5px;">Learning</span><img style="margin-left: 5px;" src="assets/qm_red.png" alt="?"></div>
+            <div class="feature-icon">Data<span style="margin-left: 5px;">Analytics</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Business<span style="margin-left: 5px;">Analyst</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Data<span style="margin-left: 5px;">Science</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Big<span style="margin-left: 5px;">Data</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">AI &<span style="margin-left: 5px;">ML</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Deep<span style="margin-left: 5px;">Learning</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
         </div>
     </div>
     <div class="background-blur"></div>
