--- a/index.html
+++ b/index.html
@@ -21,14 +21,11 @@
             </div>
             <div class="hero-content">
                 <div class="hero-left">
-                    <div class="ukno-learn">
-                        <h1 class="ukno-logo">
-                            <img src="assets/logo.png" alt="Ukno Club Logo" >
-                        </h1>
-                        <div class="learn-freely">
-                            <span class="learn" style="color:#FFFFFF;">Learn</span>
-                            <div class="underline"></div>
-                            <span class="freely" style="color:#FFFFFF;">Freely!</span>
+                    <div class="ukno-info">
+                        <img src="assets/logo.png" alt="Ukno Club Logo" class="main-logo">
+                        <div class="tagline">
+                            <span class="learn">Learn</span>
+                            <span class="freely">Freely!</span>
                         </div>
                     </div>
                     <div class="social-icons">
@@ -39,18 +36,24 @@
                     </div>
                 </div>
                 <div class="hero-right">
-                    <h1><span style="color:#F52929">E</span>mpowering Learners, Freely</h1>
-                    <p>At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
+                    <div class="right-content">
+                        <div class="auth-buttons">
+                            <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
+                            <a href="donate.html" class="about-us">About Us</a>
+                        </div>
+                        <h1><span style="color:#F52929">E</span>mpowering Learners, Freely</h1>
+                        <p>At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="feature-icons-bar">
-            <div class="feature-icon">Data<span style="margin-left: 5px;">Analytics</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
-            <div class="feature-icon">Business<span style="margin-left: 5px;">Analyst</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
-            <div class="feature-icon">Data<span style="margin-left: 5px;">Science</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
-            <div class="feature-icon">Big<span style="margin-left: 5px;">Data</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
-            <div class="feature-icon">AI &<span style="margin-left: 5px;">ML</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
-            <div class="feature-icon">Deep<span style="margin-left: 5px;">Learning</span><img style="margin-left: 5px;" src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Data Analytics <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Business Analyst <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Data Science <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Big Data <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">AI & ML <img src="assets/qm.png" alt="?"></div>
+            <div class="feature-icon">Deep Learning <img src="assets/qm.png" alt="?"></div>
         </div>
     </div>
     <div class="background-blur"></div>
