--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="landing-page">
         <div class="hero">
-            <div class="top-bar">
-                <img src="assets/logo.png" alt="Ukno Club Logo" class="logo">
+            <div class="top-right">
+                <img src="assets/logo_small.png" alt="Ukno Club Logo" class="logo-small">
                 <div class="nav-buttons">
                     <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
                     <a href="donate.html" class="about-us">About Us</a>
@@ -36,14 +36,8 @@
                     </div>
                 </div>
                 <div class="hero-right">
-                    <div class="right-content">
-                        <div class="auth-buttons">
-                            <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
-                            <a href="donate.html" class="about-us">About Us</a>
-                        </div>
-                        <h1><span style="color:#F52929">E</span>mpowering Learners, Freely</h1>
-                        <p>At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
-                    </div>
+                    <h1><span style="color:#F52929">E</span>mpowering Learners, <br>Freely</h1>
+                    <p>At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
                 </div>
             </div>
         </div>
