--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="landing-page">
         <div class="hero">
             <div class="top-right">
-                <img src="assets/logo_small.png" alt="Ukno Club Logo" class="logo-small">
                 <div class="nav-buttons">
                     <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
                     <a href="donate.html" class="about-us">About Us</a>
@@ -36,7 +35,7 @@
                     </div>
                 </div>
                 <div class="hero-right">
-                    <h1><span style="color:#F52929">E</span>mpowering Learners, <br>Freely</h1>
+                    <h1><span style="color:#F52929">E</span>mpowering Learn<br>Freely</h1>
                     <p>At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
                 </div>
             </div>
