--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="hero-right">
-                    <h1><span style="color:#F52929">E</span>mpowering Learn<br>Freely</h1>
+                    <h1><span style="color:#FFFFFF">E</span><span style="color:#F52929">mpowering Learners, Freely</span></h1>
                     <p>At Ukno Club, our mission is to make high-quality, open-source education accessible to all — without the burden of high fees. By combining top free learning resources (like YouTube videos) with powerful features such as progress tracking, smart note-taking, and user profiles, we help learners stay organized and motivated. Sign up to create your personalized learning journey, resume where you left off, and engage with a community that learns freely — together.</p>
                 </div>
             </div>
