--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="landing-page">
         <div class="hero">
-            <div class="top-right">
+            <div class="top-center">
                 <div class="nav-buttons">
                     <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
                     <a href="donate.html" class="about-us">About Us</a>
