--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Background placed at top to load underneath everything -->
+    <div class="background-blur"></div>
+
     <div class="landing-page">
         <div class="hero">
             <div class="top-right">
@@ -49,6 +52,5 @@
             <div class="feature-icon">Deep Learning <img src="assets/qm.png" alt="?"></div>
         </div>
     </div>
-    <div class="background-blur"></div>
 </body>
 </html>
