--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Background placed at top to load underneath everything -->
+    <div class="background-overlay"></div>
     <div class="background-blur"></div>
 
     <div class="landing-page">
