--- a/auth.html
+++ b/auth.html
@@ -7,41 +7,20 @@
   <link rel="stylesheet" href="auth.css" />
 </head>
 <body>
+  <a href="index.html" class="home-button">Home</a>
+
   <div class="auth-container">
     <div class="left-pane">
-      <img src="assets/logo.png" alt="Ukno Club Logo" class="logo" />
-      <div class="tagline">
-        <span class="learn">Learn</span>
-        <span class="freely">Freely!</span>
+      <div class="left-content">
+        <img src="assets/logo.png" alt="Ukno Club Logo" class="logo" />
+        <div class="tagline">
+          <span class="learn">Learn</span>
+          <span class="freely">Freely!</span>
+        </div>
       </div>
     </div>
 
     <div class="right-pane">
-      <div class="toggle-buttons">
-        <button id="signupBtn" class="active">Sign up</button>
-        <button id="loginBtn">Log In</button>
-      </div>
-
-      <form id="signup-form" class="form">
-        <input type="email" placeholder="EMAIL ID" required />
-        <input type="text" placeholder="FIRST NAME" required />
-        <input type="text" placeholder="LAST NAME" required />
-        <input type="password" placeholder="PASSWORD" required />
-        <input type="password" placeholder="CONFIRM PASSWORD" required />
-        <input type="text" placeholder="USERNAME" required />
-        <button type="submit" class="setup-btn">SETUP ACCOUNT</button>
-        <p class="privacy-note">We always protect your privacy, and will not share your information.</p>
-      </form>
-
-      <form id="login-form" class="form hidden">
-        <input type="email" placeholder="EMAIL ID" required />
-        <input type="password" placeholder="PASSWORD" required />
-        <button type="submit" class="setup-btn">LOG IN</button>
-        <p class="privacy-note">Welcome back to Ukno Club!</p>
-      </form>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
+      <div class="right-content">
+        <div class="toggle-buttons">
+          <button id="signupBtn" class="active">Sign up</butt
