--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="top-right">
                 <div class="nav-buttons">
                     <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
-                    <a href="donate.html" class="about-us">About Us</a>
+                    <a href="about.html" class="about-us">About Us</a>
                 </div>
             </div>
             <div class="hero-content">
