--- a/about.html
+++ b/about.html
@@ -11,36 +11,33 @@
 </head>
 <body>
     <div class="about-container">
-        <a href="index.html" class="home-button">Home</a>
-        <div class="left-section">
-            <img src="assets/logo.png" alt="Ukno Club Logo" class="logo">
-            <div class="club-name">
-                UKNO
-                <div class="club-box">
-                    CLUB
+        <div class="left-pane">
+            <a href="index.html" class="home-button">Home</a>
+            <div class="left-content">
+                <img src="assets/logo.png" alt="Ukno Club Logo" class="logo">
+                <div class="tagline">
+                    <span class="learn">Learn</span>
+                    <span class="freely">Freely!</span>
                 </div>
-                <div class="club-border"></div>
+                <div class="qr-code">
+                    <img src="assets/qr.png" alt="QR Code">
+                </div>
+                <p class="support-text">Love what we’re building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
             </div>
-            <div class="tagline">
-                <span class="learn">Learn</span>
-                <span class="freely">Freely!</span>
-            </div>
-            <div class="qr-code">
-                <img src="assets/qr.png" alt="QR Code">
-            </div>
-            <p class="support-text">Love what we’re building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
         </div>
-        <div class="right-section">
-            <h2 class="section-title why-ukno">why Ukno Club exists?</h2>
-            <p class="section-content why-ukno-text">Ukno Club is a free learning platform that curates top-quality open-source content to empower self-learners across the world—no paywalls, no pressure.</p>
+        <div class="right-pane">
+            <div class="right-content">
+                <h2 class="section-title why-ukno">why Ukno Club exists?</h2>
+                <p class="section-content why-ukno-text">Ukno Club is a free learning platform that curates top-quality open-source content to empower self-learners across the world—no paywalls, no pressure.</p>
 
-            <h2 class="section-title our-vision">Our Vision</h2>
-            <p class="section-content our-vision-text">To democratize education using open resources and AI tools, so that anyone with curiosity can learn anything, anywhere.</p>
+                <h2 class="section-title our-vision">Our Vision</h2>
+                <p class="section-content our-vision-text">To democratize education using open resources and AI tools, so that anyone with curiosity can learn anything, anywhere.</p>
 
-            <h2 class="section-title our-values">Our Values</h2>
-            <p class="section-content our-values-text">Open and Free Tech for Good Self-paced Learning Learner-First Design</p>
+                <h2 class="section-title our-values">Our Values</h2>
+                <p class="section-content our-values-text">Open and Free Tech for Good Self-paced Learning Learner-First Design</p>
 
-            <h2 class="section-title feedback">Have something to say? Just log in and leave feedback — we read every word!</h2>
+                <h2 class="section-title feedback">Have something to say? Just log in and leave feedback — we read every word!</h2>
+            </div>
         </div>
     </div>
 </body>
