--- a/about.html
+++ b/about.html
@@ -19,10 +19,12 @@
                     <span class="learn">Learn</span>
                     <span class="freely">Freely!</span>
                 </div>
-                <div class="qr-code">
-                    <img src="assets/qr.png" alt="QR Code">
+                <div class="left-bottom">
+                    <div class="qr-code">
+                        <img src="assets/qr.png" alt="QR Code">
+                    </div>
+                    <p class="support-text">Love what we’re building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
                 </div>
-                <p class="support-text">Love what we’re building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
             </div>
         </div>
         <div class="right-pane">
