--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             </div>
             <div class="left-bottom">
                 <div class="qr-code">
-                    <img src="assets/qr.png" alt="QR Code">
+                    <img src="assets/qr.png.jpg" alt="QR Code">
                 </div>
                 <p class="support-text">Love what we’re building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
             </div>
