--- a/auth.html
+++ b/auth.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Ukno Club - Auth</title>
     <link rel="stylesheet" href="auth.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="auth-container">
         <div class="left-pane">
+            <div class="home-button-container">
+                <a href="index.html" class="home-button">Home</a>
+            </div>
             <div class="left-content">
                 <img src="assets/logo.png" alt="Ukno Club Logo" class="logo" />
                 <div class="tagline">
@@ -20,9 +26,6 @@
 
         <div class="right-pane">
             <div class="right-content">
-                <div class="home-button-container">
-                    <a href="index.html" class="home-button">Home</a>
-                </div>
                 <div class="toggle-buttons">
                     <button id="signupBtn" class="active">Sign up</button>
                     <button id="loginBtn">Log In</button>
