--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
 <body>
     <div class="about-container">
         <div class="left-pane">
-            <a href="index.html" class="home-button">Home</a>
+            <div class="home-button-container">
+                <a href="index.html" class="home-button">Home</a>
+            </div>
             <img src="assets/logo.png" alt="Ukno Club Logo" class="logo">
             <div class="tagline">
                 <span class="learn">Learn</span>
@@ -22,7 +24,7 @@
                 <div class="qr-code">
                     <img src="assets/qr.png.jpg" alt="QR Code">
                 </div>
-                <p class="support-text">Love what we’re building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
+                <p class="support-text">Love what we're building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
             </div>
         </div>
         <div class="right-pane">
