--- a/new-user-dashboard.html
+++ b/new-user-dashboard.html
@@ -26,7 +26,7 @@
 
         <!-- Onboarding Guide -->
         <section class="onboarding-section">
-            <h2><i class="fas fa-rocket"></i> Start Your Learning Journey</h2>
+            <h2 class="section-title-red"><i class="fas fa-rocket"></i> Start Your Learning Journey</h2>
             <div class="onboarding-steps">
                 <div class="step-card completed">
                     <h3>Account Ready</h3>
@@ -34,16 +34,17 @@
                     <i class="fas fa-check-circle"></i>
                 </div>
                 
-                <div class="step-card current">
+                <a href="courses.html" class="step-card current">
                     <h3>Choose Your First Course</h3>
-                    <p>Begin with our recommended path below</p>
-                </div>
+                    <p>Click to browse all available courses</p>
+                    <i class="fas fa-arrow-right"></i>
+                </a>
             </div>
         </section>
 
         <!-- Recommended Starter Course -->
         <section class="recommendations-section">
-            <h2><i class="fas fa-star"></i> Recommended Starting Point</h2>
+            <h2 class="section-title-red"><i class="fas fa-star"></i> Recommended Starting Point</h2>
             <div class="course-cards">
                 <a href="courses.html#data-analytics" class="course-card">
                     <i class="fas fa-chart-bar"></i>
@@ -56,19 +57,19 @@
 
         <!-- Quick Actions -->
         <section class="actions-section">
-            <h2><i class="fas fa-bolt"></i> Quick Start</h2>
+            <h2 class="section-title-red"><i class="fas fa-bolt"></i> Quick Access</h2>
             <div class="action-grid">
                 <a href="courses.html" class="action-card">
                     <i class="fas fa-book-open"></i>
-                    <span>All Courses</span>
+                    <span>Browse Courses</span>
                 </a>
-                <a href="tutorials.html" class="action-card">
-                    <i class="fas fa-video"></i>
-                    <span>Video Tutorials</span>
+                <a href="notes.html" class="action-card">
+                    <i class="fas fa-book"></i>
+                    <span>My Notes</span>
                 </a>
-                <a href="help.html" class="action-card">
-                    <i class="fas fa-question-circle"></i>
-                    <span>Get Help</span>
+                <a href="feedback.html" class="action-card">
+                    <i class="fas fa-comment-alt"></i>
+                    <span>Feedback</span>
                 </a>
             </div>
         </section>
