--- a/admin-login.html
+++ b/admin-login.html
@@ -62,7 +62,7 @@
         
         input {
             width: 100%;
-            padding: 12px 15px;
+            padding: 12px;
             background: rgba(255, 255, 255, 0.1);
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 6px;
