--- a/admin-login.html
+++ b/admin-login.html
@@ -134,7 +134,7 @@
             const password = document.getElementById('password').value;
             
             // Simulate authentication (in real app, this would be a server request)
-            if (username === "admin" && password === "admin123") {
+            if (username === "admin" && password === "club2025") {
                 // Store authentication status
                 localStorage.setItem('adminAuthenticated', 'true');
                 
