--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ukno Club - Feedback</title>
-  <link rel="stylesheet" href="feedback.css" />
+  <link rel="stylesheet" href="css.feedback.css" />
 </head>
 <body>
   <div class="container">
@@ -16,6 +16,6 @@
     <div id="feedbackList"></div>
   </div>
 
-  <script src="feedback.js"></script>
+  <script src="js/feedback.js"></script>
 </body>
 </html>
