--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="hero">
             <div class="top-right">
                 <div class="nav-buttons">
-                    <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
-                    <a href="about.html" class="about-us">About Us</a>
+                    <a href="pages/auth.html" class="sign-up-login">Sign Up/Log In</a>
+                    <a href="pages/about.html" class="about-us">About Us</a>
                 </div>
             </div>
             <div class="hero-content">
