--- a/pages/admin-dashboard.html
+++ b/pages/admin-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Ukno Club</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="css/dashboard.css">
     <script>
         // Check authentication on page load
         if (!localStorage.getItem('adminAuthenticated')) {
