--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ukno Club</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet">
@@ -17,8 +17,8 @@
         <div class="hero">
             <div class="top-right">
                 <div class="nav-buttons">
-                    <a href="pages/auth.html" class="sign-up-login">Sign Up/Log In</a>
-                    <a href="pages/about.html" class="about-us">About Us</a>
+                    <a href="auth.html" class="sign-up-login">Sign Up/Log In</a>
+                    <a href="about.html" class="about-us">About Us</a>
                 </div>
             </div>
             <div class="hero-content">
