--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,3 +1,8 @@
+<script>
+  if (!localStorage.getItem('isAdmin') || localStorage.getItem('isAdmin') !== 'true') {
+    window.location.href = 'auth.html';
+  }
+</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
