--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto&display=swap" rel="stylesheet">
-</head>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> </head>
 <body>
     <div class="about-container">
         <div class="left-pane">
@@ -21,10 +21,11 @@
                 <span class="freely">Freely!</span>
             </div>
             <div class="left-bottom">
-                <div class="qr-code">
-                    <img src="assets/qr.png.jpg" alt="QR Code">
+                <div class="qr-code-container">
+                     <div class="qr-code" id="qrCodeTrigger"> <img src="assets/qr.png.jpg" alt="QR Code">
+                    </div>
+                    <p class="support-text">Love what we're building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
                 </div>
-                <p class="support-text">Love what we're building? Help us grow by dropping a little support — every bit fuels the future of free learning!</p>
             </div>
         </div>
         <div class="right-pane">
@@ -42,5 +43,37 @@
             </div>
         </div>
     </div>
+
+    <div class="modal-overlay" id="qrCodeModal">
+        <div class="modal-content">
+            <span class="close-button" id="closeModal">&times;</span> <img src="assets/qr.png.jpg" alt="Scan QR Code" class="modal-qr-image"> <p class="modal-caption">Scan to Support Us!</p>
+        </div>
+    </div>
+
+
+    <script>
+        // Get modal elements
+        const modal = document.getElementById('qrCodeModal');
+        const qrCodeTrigger = document.getElementById('qrCodeTrigger');
+        const closeModal = document.getElementById('closeModal');
+
+        // Open the modal when the QR code is clicked
+        qrCodeTrigger.addEventListener('click', function() {
+            modal.style.display = 'flex'; // Use flex to center the modal-content
+        });
+
+        // Close the modal when the close button is clicked
+        closeModal.addEventListener('click', function() {
+            modal.style.display = 'none';
+        });
+
+        // Close the modal when the overlay is clicked
+        window.addEventListener('click', function(event) {
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+    </script>
+
 </body>
 </html>
